🐛 FIX: Increase animation accent contrast

--- a/material.css
+++ b/material.css
@@ -617,7 +617,7 @@ svg.vertical-three-dots {
   border-left: none;
   border-right: none;
   font-size: 17px;
-  background: linear-gradient(var(--secondary), var(--secondary)) bottom / 0%
+  background: linear-gradient(var(--secondary-dark), var(--secondary-dark)) bottom / 0%
     2px no-repeat var(--background-secondary-alt);
   border-radius: var(--small-radius) var(--small-radius) 0px 0px;
   transition: 0.2s;
